deal_command is working.

--- a/vm/Makefile
+++ b/vm/Makefile
@@ -21,6 +21,8 @@ OBJECTS					=	op.o\
 							vm_t_proc.o\
 							\
 							vm_t_champion.o\
+							vm_t_champion_part2.o\
+							vm_t_champion_part3.o\
 							vm_read_theader.o\
 							\
 							vm_deal_command.o\
@@ -31,6 +33,23 @@ OBJECTS					=	op.o\
 							\
 							vm_t_arg.o\
 							vm_t_arg_sub.o\
+							\
+							vm_execute_live.o\
+							vm_execute_ld.o\
+							vm_execute_st.o\
+							vm_execute_add.o\
+							vm_execute_sub.o\
+							vm_execute_sti.o\
+							vm_execute_and.o\
+							vm_execute_or.o\
+							vm_execute_xor.o\
+							vm_execute_zjmp.o\
+							vm_execute_ldi.o\
+							vm_execute_lld.o\
+							vm_execute_lldi.o\
+							vm_execute_aff.o\
+							vm_execute_fork.o\
+							vm_execute_lfork.o\
 							\
 							add_libft.o
 
@@ -74,6 +93,8 @@ main.o					:	$(SRC)main.c $(HEADERS)
 vm_t_map.o				:	$(SRC)vm_t_map.c $(HEADERS)
 vm_t_proc.o				:	$(SRC)vm_t_proc.c $(HEADERS)
 vm_t_champion.o			:	$(SRC)vm_t_champion.c $(HEADERS)
+vm_t_champion_part2.o	:	$(SRC)vm_t_champion_part2.c $(HEADERS)
+vm_t_champion_part3.o	:	$(SRC)vm_t_champion_part3.c $(HEADERS)
 vm_read_theader.o		:	$(SRC)vm_read_theader.c $(HEADERS)
 
 vm_deal_command.o		:	$(SRC)vm_deal_command.c $(HEADERS)
@@ -86,6 +107,23 @@ vm_t_arg.o				:	$(SRC)vm_t_arg.c $(HEADERS)
 vm_t_arg_sub.o			:	$(SRC)vm_t_arg_sub.c $(HEADERS)
 
 add_libft.o				:	$(SRC)add_libft.c $(HEADERS)
+
+vm_execute_live.o		:	$(SRC)vm_execute_live.c $(HEADERS)
+vm_execute_ld.o			:	$(SRC)vm_execute_ld.c $(HEADERS)
+vm_execute_st.o			:	$(SRC)vm_execute_st.c $(HEADERS)
+vm_execute_add.o		:	$(SRC)vm_execute_add.c $(HEADERS)
+vm_execute_sub.o		:	$(SRC)vm_execute_sub.c $(HEADERS)
+vm_execute_sti.o		:	$(SRC)vm_execute_sti.c $(HEADERS)
+vm_execute_and.o		:	$(SRC)vm_execute_and.c $(HEADERS)
+vm_execute_or.o			:	$(SRC)vm_execute_or.c $(HEADERS)
+vm_execute_xor.o		:	$(SRC)vm_execute_xor.c $(HEADERS)
+vm_execute_zjmp.o		:	$(SRC)vm_execute_zjmp.c $(HEADERS)
+vm_execute_ldi.o		:	$(SRC)vm_execute_ldi.c $(HEADERS)
+vm_execute_lld.o		:	$(SRC)vm_execute_lld.c $(HEADERS)
+vm_execute_lldi.o		:	$(SRC)vm_execute_lldi.c $(HEADERS)
+vm_execute_aff.o		:	$(SRC)vm_execute_aff.c $(HEADERS)
+vm_execute_fork.o		:	$(SRC)vm_execute_fork.c $(HEADERS)
+vm_execute_lfork.o		:	$(SRC)vm_execute_lfork.c $(HEADERS)
 
 clean					:
 							$(RM) $(OBJECTS)
